# caw-cli

./: .gitignore  AGENTS.md  CHANGES_SUMMARY.md  CLAUDE.md  CLEANUP.md  INSTALL.md  LICENSE  MCP_CONFIGURATION.md  PACKAGING_GUIDE.md  PROJECT_PURPOSE.md  QWEN.md  README.md  SYSTEM_PROMPT.md  UPDATE_SUMMARY.md  USAGE.md  build_exe.py  cae-cli.spec  cae-gui.spec  fix_ssh_host_keys.py  generate_api_docs.py  install_optional.py  opencode.jsonc  pyproject.toml  requirements.txt  results.json  ruff.toml  run_github_mcp.py  run_github_mcp_fixed.py  run_sqlite_mcp.py  run_sqlite_mcp_fixed2.py  run_tests.sh  setup.py  simple_sync.py  sync_with_mcp.py  sync_with_ssh_mcp.py  test_api.py  test_chat.py  test_core_import.py  test_final.py  test_fix.py  (+7 more)
.claude/: settings.local.json
.github/workflows/: ci.yml  dependabot.yml  pr-review.yml  python-package.yml  release.yml  stale.yml
.opencode/: openwork.json
.opencode/agents/: openwork.md
.opencode/commands/: GetStarted.md
data/: config.yaml  languages.json  learning_progress.json  materials.json
data/quiz/: basic_mechanical.yaml
docs/: AGENTS.md  API_REFERENCE.md  CONTRIBUTING.md  FAQ.md  FEATURES.md  FINAL_SUMMARY.md  INSTALLATION_GUIDE.md  OPTIMIZE_COMPLETE.md  OPTIMIZE_DEPENDENCIES.md  PROJECT_INTRO.md  PROJECT_PURPOSE.md  QUICKSTART.md  index.md
docs/api/: REFERENCE.md
docs/dev/: DEVELOP.md
docs/mcp/: MCP_FIX_SUMMARY.md  README.md
docs/user/: INSTALL.md  QUICKSTART.md
everything-claude-code-main/everything-claude-code-main/: .gitignore  README.md  package.json
examples/: ai_generate_demo.py  basic_usage.py  beam_analysis.yaml  demo_config_usage.py  optimization_demo.yaml  optimize_demo.py  project.yaml
freecad-parametric-mcp/: INSTALLATION_COMPLETE.md  PROJECT_SUMMARY.md  README.md  install_freecad_addon.bat  pyproject.toml
freecad-parametric-mcp/addon/ParametricMCP/: Init.py  InitGui.py  ParametricMCPWorkbench.py  bridge_server.py
freecad-parametric-mcp/docs/: installation.md
freecad-parametric-mcp/examples/: demo_parametric_gear.py
freecad-parametric-mcp/src/freecad_parametric_mcp/: __init__.py  bridge.py  server.py
freecad-parametric-mcp/src/freecad_parametric_mcp/tools/: __init__.py  analysis.py  family.py  features.py  history.py  parameters.py  sketches.py  templates.py
knowledge/: README.md  SolidWorks学习笔记.md  fasteners.md  fem.md  materials.md  mechanics.md  solidworks_index.md  standard_parts.md  theory.md  tolerances.md  我的学习笔记_示例.md  机械设计基础笔记.md  材料力学笔记.md  理论力学笔记.md
optimization_output/: optimization_report.md
prompts/learning/: 3-2-1-method.md  deep-learning.md  feynman.md
prompts/lifestyle/: mindset.md
prompts/mechanical/: cad-design.md  materials.md
prompts/system/: main.md
results/: analysis_results.json
scripts/: README.md  first_run_check.py
scripts/mcp/: README.md  run_github_mcp_protocol_fixed.py  run_mcp_with_encoding_fix.py  run_simple_mcp.py  run_sqlite_mcp_protocol_fixed.py
scripts/setup/: MinerU_markdown_202602161557244.md  README.md  init_sqlite_db.py  install.py
scripts/test/: README.md  run_tests.bat  run_tests.py
scripts/tools/: README.md  code_check.py  convert_mechanical_handbook.py  convert_solidworks_knowledge.py  demo_github_mcp.py  demo_workflow.py  run_github_mcp_server.bat  setup_sqlite_mcp.bat
src/: __init__.py  main_gui.py
src/core/: __init__.py  exceptions.py  types.py
src/gui/: __init__.py  animations.py  cae_ui.html  main_window.py  particles.py  terminal_gui.py  terminal_ui.html  theme.py  web_gui.py  web_view.py
src/integrations/: __init__.py
src/knowledge/: sample_knowledge.md
src/sw_helper/: __init__.py  __main__.py  cli.py  cli_prompt.py  knowledge.py  main_menu.py  pr_review.py
tests/: README.md  test_cli.py  test_gui_import.py  test_pr_review.py  test_workflow_integration.py
tests/assets/: report.css
tests/integration/: test_phase1_integration.py
tests/mcp/: README.md  test_encoding_fix.py  test_mcp_basic.py  test_mcp_connection_diagnostic.py  test_mcp_full_protocol.py  test_mcp_simple.py  test_simple_mcp.py  test_sqlite_fixed_tools.py
tests/reports/: test_report.html
tests/unit/: test_ai.py  test_chat_page.py  test_core.py  test_geometry_new.py  test_knowledge.py  test_learning.py  test_local_gguf.py  test_material.py  test_mechanics.py  test_mesh.py  test_mesh_new.py  test_model_generator.py  test_report_mechanics.py  test_utils.py
知识库笔记/100.机械设计手册-单行本-联接与紧固.pdf-8bb4d3f9-b467-4187-ad58-f70c810f17fc/: 9bb4dc48-cbff-4d6d-827d-9f82ab72100b_content_list.json  block_list.json  full.md  机械设计手册-单行本-联接与紧固.md
知识库笔记/101.机械设计图册机械设计的错例与禁忌.pdf-c93d116b-b4b2-4890-ae4d-fcdb522af431/: 3c56b393-0e17-48d2-859d-7fe30225589c_content_list.json  block_list.json  full.md
知识库笔记/103.精密机械零件与部件.pdf-3bcb22de-276c-4833-8c62-6fc72c6be32f/: 6955b6ab-70a3-4b6a-8845-2c73c4e7d70b_content_list.json  block_list.json  full.md  精密机械零部件.md
知识库笔记/104.空间机构设计(1).pdf-7c4716a4-b8f2-4e24-8b00-60f0dd2d1e58/: block_list.json  空间机构设计1.md
知识库笔记/104.空间机构设计.pdf-c013eb0a-b78a-47d9-a5c8-6c0c031e1387/: 4f383059-9ca2-43bd-9018-c1059a4c06cb_content_list.json  block_list.json  full.md
知识库笔记/Z4自动化机构图例.pdf-dcfcbb1b-acb8-45f1-8935-b0fe4693ab36/: a79466f4-cd2c-4d13-87a5-c147dcdd31d7_content_list.json  block_list.json  full.md  自动化机构图例.md
知识库笔记/大模型RAG应用开发之PDF解析工具对比-e46380c7-932b-4701-9b0a-13dcd85d17da/: content_list.json  full.md  main.html
知识库笔记/带传动.pdf-d2966dc2-815f-4e52-a3d9-e6cdbf1cff41/: 6d661ccb-0ce1-4ed5-8431-467767f8aae1_content_list.json  6d661ccb-0ce1-4ed5-8431-467767f8aae1_model.json  block_list.json  full.md  layout.json  带传动.md
知识库笔记/常用电动机.pdf-b0ca5870-54e9-4890-a6d4-f216219ee53b/: 4f3a700b-16d5-4704-8b9e-aede34541e63_content_list.json  block_list.json  (+3 more)
(+283 files in other folders)
